Fix QWebHistory serialization.

Patch by Jedrzej Nowacki <jedrzej.nowacki@nokia.com> on 2010-05-18
Reviewed by Simon Hausmann.

Regression was caused by bug 33224. The streaming function
should generate a documentSequenceNumber for all loaded values.

[Qt] tst_QWebHistory::serialize_2() fails
https://bugs.webkit.org/show_bug.cgi?id=37322

* Api/qwebhistory.cpp:
(operator>>):

Canonical link: https://commits.webkit.org/50796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59660 268f45cc-cd09-0410-ab3c-d52691b4dbfc